--- a/index.html
+++ b/index.html
@@ -18,33 +18,46 @@
 
 body{
   min-height:100vh;
-  background:radial-gradient(circle at top,#3a7bd5,#1e3c72 60%,#0b1c3a);
+  /* мягкий сине-зелёный фон под Minecraft */
+  background:radial-gradient(circle at top,#3fbfff 0%,#1f7e6a 45%,#071b34 100%);
   font-family:Inter,sans-serif;
   display:flex;
   justify-content:center;
   align-items:center;
   color:#fff;
   overflow:hidden;
+  position:relative;
 }
 
-/* ❄️ СНЕГ */
-.snowflake{
+/* падающие кирки / эндерперлы */
+.mparticle{
   position:fixed;
-  top:-10px;
-  color:rgba(255,255,255,.95);
+  top:-80px;
+  width:40px;
+  height:40px;
+  background-size:contain;
+  background-repeat:no-repeat;
+  background-position:center;
   pointer-events:none;
-  animation:fall linear infinite;
-  z-index:10000;
+  animation:mpFall linear infinite, mpFloat ease-in-out infinite;
+  z-index:1;
+  opacity:.9;
+  image-rendering:pixelated;
 }
-@keyframes fall{
-  to{transform:translateY(110vh);opacity:0}
+@keyframes mpFall{
+  to{transform:translateY(115vh);}
+}
+@keyframes mpFloat{
+  0%{margin-left:-15px;opacity:.1}
+  50%{margin-left:15px;opacity:1}
+  100%{margin-left:-15px;opacity:.1}
 }
 
 /* ===== PRELOADER ===== */
 #preloader{
   position:fixed;
   inset:0;
-  background:radial-gradient(circle at top,#3a7bd5,#1e3c72 60%,#0b1c3a);
+  background:radial-gradient(circle at top,#46d3ff 0%,#218a6b 50%,#020c1a 100%);
   display:flex;
   justify-content:center;
   align-items:center;
@@ -91,27 +104,42 @@ body{
   box-shadow:0 20px 50px rgba(0,0,0,.6);
   background:rgba(255,255,255,.08);
   backdrop-filter:blur(14px);
+  max-width:420px;           /* чуть компактнее под квадратное видео */
+  margin:0 auto;
 }
 
 video{
   width:100%;
   display:block;
-  background:#000;
+  /* делаем обложку без уродливых полос – всегда заполняет карточку */
+  aspect-ratio:4/5;
+  background:#020814;
+  object-fit:cover;
 }
 
 .play-btn{
   margin:25px auto 0;
   width:100%;
   max-width:320px;
-  padding:16px;
+  padding:14px 18px;
   font-family:BenzinBold;
   font-size:18px;
   border-radius:50px;
   border:none;
   cursor:pointer;
   color:#fff;
-  background:linear-gradient(135deg,#ffb347,#ff416c);
+  /* чуть выделяется, но в той же гамме */
+  background:linear-gradient(135deg,#00e676,#00b0ff);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:10px;
   animation:pulse 2s infinite;
+}
+.play-btn img.pickaxe-icon{
+  width:30px;
+  height:30px;
+  image-rendering:pixelated;
 }
 @keyframes pulse{
   0%,100%{transform:scale(1)}
@@ -179,7 +207,7 @@ h2{
 <div id="preloader">
   <div class="loader-box">
     <div class="spinner"></div>
-    <p>Загрузка Aviamasters X-Mas…</p>
+    <p>Загрузка MINEDROP…</p>
     <div class="percent" id="percent">0%</div>
   </div>
 </div>
@@ -187,12 +215,15 @@ h2{
 <!-- MAIN -->
 <div class="container">
   <div class="video-box">
-    <video id="video" poster="images/preview.png" preload="metadata" playsinline muted>
-      <source src="video/promo.mp4" type="video/mp4">
+    <video id="video" poster="images/photo_2025-12-05_18-15-40.png" preload="metadata" playsinline muted>
+      <source src="video/promo2.mp4" type="video/mp4">
     </video>
   </div>
 
-  <button class="play-btn" id="play">🎄 ИСПЫТАТЬ УДАЧУ</button>
+  <button class="play-btn" id="play">
+    <img src="images/imagespickaxe_icon.png.png" alt="Pickaxe" class="pickaxe-icon">
+    ИСПЫТАТЬ УДАЧУ
+  </button>
 
   <h2>НАЧНИ ИГРАТЬ</h2>
   <a href="https://t.me/nikitosluckybear" class="tg-btn" target="_blank">
@@ -203,7 +234,7 @@ h2{
 <!-- POPUP -->
 <div class="popup" id="popup">
   <div class="popup-box">
-    <h3>💰 Вы могли выиграть <span class="win-amount">33 125 ₽</span></h3>
+    <h3>💰 Вы могли выиграть <span class="win-amount">25 280 ₽</span></h3>
     <p>Попробуй прямо сейчас</p>
     <a href="https://t.me/nikitosluckybear" class="tg-btn" target="_blank">
       Испытать удачу
@@ -212,17 +243,29 @@ h2{
 </div>
 
 <script>
-/* ❄️ СНЕГ */
+/* ПАДАЮЩИЕ КИРКИ / ЭНДЕРПЕРЛЫ */
+const sprites=[
+  "images/pickaxe.png.png"
+];
+
 setInterval(()=>{
-  const s=document.createElement('div');
-  s.className='snowflake';
-  s.style.left=Math.random()*100+'vw';
-  s.style.fontSize=10+Math.random()*18+'px';
-  s.style.animationDuration=5+Math.random()*6+'s';
-  s.innerHTML='❄';
-  document.body.appendChild(s);
-  setTimeout(()=>s.remove(),11000);
-},250);
+  const el=document.createElement('div');
+  el.className='mparticle';
+  el.style.left=Math.random()*100+'vw';
+
+  const size=64+Math.random()*56; // 64–120px — ещё крупнее
+  el.style.width=size+'px';
+  el.style.height=size+'px';
+
+  const img=sprites[Math.floor(Math.random()*sprites.length)];
+  el.style.backgroundImage=`url("${img}")`;
+
+  const fallDur=10+Math.random()*8; // 10–18 c
+  el.style.animationDuration=fallDur+'s, '+(6+Math.random()*4)+'s';
+
+  document.body.appendChild(el);
+  setTimeout(()=>el.remove(),(fallDur+3)*1000);
+},650);
 
 /* PRELOADER */
 const percentEl=document.getElementById('percent');
@@ -266,7 +309,8 @@ document.getElementById('play').onclick=async()=>{
   }catch{
     video.play();
   }
-  setTimeout(()=>document.getElementById('popup').classList.add('active'),13000);
+  /* попап появляется чуть позже — примерно когда цифры уже остановились */
+  setTimeout(()=>document.getElementById('popup').classList.add('active'),8000);
 };
 </script>
 
